<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abdulrahman.just_coffe.MainActivity">

    <TextView
        android:id="@+id/txv_topping"
        android:layout_width="wrap_content"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
/>
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_marginLeft="24dp"
       android:orientation="vertical"
       android:layout_height="wrap_content">
   <CheckBox
       android:id="@+id/cBox_1"
       android:padding="5dp"
       android:text="Whipped"
       android:layout_width="wrap_content"
       android:layout_weight="1"
       android:layout_height="0dp" />

       <CheckBox
           android:text="Whipped"
           android:layout_width="wrap_content"
           android:id="@+id/cBox_2"
           android:padding="5dp"
           android:layout_weight="1"
           android:layout_height="0dp" />
   </LinearLayout>

    <TextView
        android:textSize="24sp"
        android:text="@string/quantity"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

       <Button
           android:id="@+id/btn_decrement"
           android:text="-"
           android:onClick="decrementOrder"
           android:textSize="24sp"
           android:layout_weight="0.3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/txv_order_counter"
            android:text="0"
            android:gravity="center"
            android:layout_weight="0.8"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="+"
            android:onClick="incrementOrder"
            android:textSize="24sp"
            android:layout_weight="0.3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:text="@string/summer_order"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


   <RelativeLayout
       android:layout_marginTop="24dp"
       android:padding="16dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
      <TextView
          android:text="@string/customer_name"
          android:layout_alignParentLeft="true"
          android:layout_marginRight="5dp"
          android:layout_width="wrap_content"
          android:id="@+id/txv_name"
          android:layout_height="wrap_content" />
       <TextView
           android:id="@+id/txv_customer_name"
           android:gravity="center"
           android:hint="show customer name"
           android:layout_toEndOf="@id/txv_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />

       <TextView
           android:text="@string/add_flaver"
           android:id="@+id/txv_flaver"
           android:layout_marginRight="5dp"
           android:layout_below="@id/txv_name"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />

       <TextView
           android:layout_below="@id/txv_name"
           android:id="@+id/txv_get_flaver"
           android:hint=" Here Show which flaver custo"
           android:layout_toRightOf="@id/txv_flaver"
           android:gravity="center"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />

       <TextView
           android:text="Quantity : "
           android:id="@+id/txv_total"
           android:layout_below="@id/txv_flaver"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />

       <TextView
           android:id="@+id/txv_total_price"
           android:hint=" Here show total price."
           android:layout_toRightOf="@id/txv_total"
           android:layout_below="@id/txv_flaver"
           android:gravity="center"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />


       <TextView
           android:layout_below="@id/txv_total"
           android:id="@+id/txv_quantity"
           android:text="Totoal :"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
       <TextView
           android:layout_below="@id/txv_total"
           android:layout_toRightOf="@id/txv_quantity"
           android:hint="Here show cups quantity"
           android:gravity="center"
           android:id="@+id/txv_price"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
   </RelativeLayout>

    <TextView
        android:text="@string/thanks"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:textSize="24sp"
        android:layout_height="wrap_content" />

    <Button
        android:text="order"
        android:layout_marginLeft="16dp"
        android:onClick="submitOrder"
        android:layout_marginRight="16dp"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />
</LinearLayout>
